--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 body {
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Popins', Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
