Update: Refactored Source Code

--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,8 @@ body.dark-mode .toggle-button:hover {
   cursor: pointer;
   display: none;
   font-size: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 10000;
 }
 
 #scroll-to-top:hover {
