--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ body {
     background-color 0.4s ease,
     color 0.4s ease;
   border-radius: 16px;
-  margin: auto;
+  margin: 20px auto;
 }
 
 h1 {
