--- a/information-website/assets/css/styles.css
+++ b/information-website/assets/css/styles.css
@@ -114,6 +114,12 @@ ul li {
   border-left: 3px solid #3498db;
 }
 
+ul li:hover {
+  background: #333;
+  border-left-color: #2980b9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 body li::marker {
   color: #555;
 }
@@ -293,6 +299,9 @@ body.dark-mode .toggle-button:hover {
   font-size: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 10000;
+  transition:
+    background-color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 #scroll-to-top:hover {
